force-app/main/default/objects/Pick_Up_Location__c/Pick_Up_Location__c.object-meta.xml
<CustomObject>
    <label>Pick-Up Location</label>
    <nameField>
        <displayFormat>LI-{0000}</displayFormat>
        <label>Pick-Up Location Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pick-Up Locations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>