force-app/main/default/objects/Pick_Up_Location__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <label>Address</label>
    <type>TextArea</type>
</CustomField>