force-app/main/default/objects/Pick_Up_Location__c/fields/CSQ__c.field-meta.xml
<CustomField>
    <fullName>CSQ__c</fullName>
    <label>CSQ</label>
    <referenceTo>Customer_Scoping_Questionnaire__c</referenceTo>
    <relationshipLabel>Pick-Up Locations</relationshipLabel>
    <relationshipName>Locations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>