force-app/main/default/objects/Pick_Up_Location__c/fields/CSQ_Status__c.field-meta.xml
<CustomField>
    <fullName>CSQ_Status__c</fullName>
    <formula>text(CSQ__r.CSQ_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSQ Status</label>
    <type>Text</type>
</CustomField>