force-app/main/default/objects/Pick_Up_Location__c/fields/Freight_Offering__c.field-meta.xml
<CustomField>
    <fullName>Freight_Offering__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Testing relationship between FO &amp; Location</description>
    <label>Freight Offering</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>$Source.CSQ__c</field>
            <operation>equals</operation>
            <valueField>Freight_Offering__c.Customer_Scoping_Questionnaire__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Freight_Offering__c</referenceTo>
    <relationshipLabel>Pick-Up Locations</relationshipLabel>
    <relationshipName>Pick_Up_Locations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>