force-app/main/default/objects/Pick_Up_Location__c/fields/Location_Type__c.field-meta.xml
<CustomField>
    <fullName>Location_Type__c</fullName>
    <inlineHelpText>QLD 
Region 1 = Gold Coast-Lismore-Sunshine Coast-Toowoomba
Region 2 = Mackay-Townsville- Rockhampton 

NSW/ACT
Region 1 = Canberra-Wollongong-Albury
Region 2 = Orange-Tamworth-Wagga Wagga
Region 3 = Coffs Harbour-Newcastle-Port Macquarie-Tuggerah</inlineHelpText>
    <label>Location Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>State__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Regional</fullName>
            </value>
            <value>
                <fullName>Metro</fullName>
            </value>
            <value>
                <fullName>Regional 1 (GLD, LSS, SSC, TWB)</fullName>
            </value>
            <value>
                <fullName>Regional 2 (MAC, TVL, ROC)</fullName>
            </value>
            <value>
                <fullName>Regional 1 (CBR,WOL,ALB,WAG)</fullName>
            </value>
            <value>
                <fullName>Regional 2 (ORG,TAM)</fullName>
            </value>
            <value>
                <fullName>Regional 3 (COF,NCL,PTM,TUG)</fullName>
            </value>
            <value>
                <fullName>Regional (Bendigo-Geelong-Hobart-Shepparton-Traralgon-Launceston)</fullName>
            </value>
            <value>
                <fullName>Melbourne South East</fullName>
            </value>
            <value>
                <fullName>Regional 1 (WOL)</fullName>
            </value>
            <value>
                <fullName>Regional 1 (CBR, WOL, ALB, WAG, ORG)</fullName>
            </value>
            <value>
                <fullName>Regional 2 (CBR, ALB, WAG, ORG)</fullName>
            </value>
            <value>
                <fullName>Regional 3 (TAM)</fullName>
            </value>
            <value>
                <fullName>Regional 4 (COF, NCL, PTM, TUG)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>