force-app/main/default/objects/Pick_Up_Location__c/fields/Pick_up_Location_Status__c.field-meta.xml
<CustomField>
    <fullName>Pick_up_Location_Status__c</fullName>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Submitted for Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Pending Information</fullName>
            </value>
            <value>
                <fullName>Received Information</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>