force-app/main/default/objects/Pick_Up_Location__c/fields/Primary_Pick_Up_Location__c.field-meta.xml
<CustomField>
    <fullName>Primary_Pick_Up_Location__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Pick Up Location</label>
    <type>Checkbox</type>
</CustomField>