force-app/main/default/objects/Pick_Up_Location__c/validationRules/CSQID_Matching_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>CSQID_Matching_Validation_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>CSQ__c  &lt;&gt;  Freight_Offering__r.Customer_Scoping_Questionnaire__c</errorConditionFormula>
    <errorMessage>The Pick-up Location CSQ does not match with Freight Offering CSQ. Please choose accurate Freight Offering Value.</errorMessage>
</ValidationRule>