force-app/main/default/objects/Pick_Up_Location__c/validationRules/Require_Site_inspection_status_Field.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Site_inspection_status_Field</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Required_Site_Inspection__c , &apos;Yes&apos;) &amp;&amp; ( ISBLANK(text(  Site_Inspection_Status__c )))</errorConditionFormula>
    <errorMessage>In order to approve the record, please update the Site Inspection Status field</errorMessage>
</ValidationRule>