force-app/main/default/objects/Pick_Up_Location__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Pick_up_Location_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>